// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VisualSnapshots createBuild log output 1`] = `
[MockFunction] {
  "calls": [
    [
      "Build foo created: undefined",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`VisualSnapshots finishBuild log output when build status resolves to Equal 1`] = `
[MockFunction] {
  "calls": [
    [
      "Build buildId finished (status=EQUAL, unapprovedCount=2, errorCount=1).",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`VisualSnapshots finishBuild log output when build status resolves to Queued 1`] = `
[MockFunction] {
  "calls": [
    [
      "Build buildId finished but snapshots haven't been compared yet. Check the build status in a few moments.",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`VisualSnapshots finishBuild log output when build status resolves to Running 1`] = `
[MockFunction] {
  "calls": [
    [
      "Build buildId finished but snapshots haven't been compared yet. Check the build status in a few moments.",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`VisualSnapshots uploadImageAndCreateSnapshot log output 1`] = `
[MockFunction] {
  "calls": [
    [
      "Uploaded image to build testBuildId: upload id=uploadId.",
    ],
    [
      "Created a snapshot testSnapshotName for build testBuildId.",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
